# airflow-hw

./: .gitignore  README.md  pyproject.toml
src/: .env-template  docker-compose.yml
src/dags/: hw_01.py  hw_02.py  hw_03.py
src/dags/task4/: __init__.py  hook.py
src/dags/task5/: __init__.py  operator.py
src/dags/task5/sql/: create_table.sql  insert_rate.sql
